fix: code cleanup, duplication extraction, error handling, and test coverage
- Dead code: removed unused SoftConstraintScorer constructor, duplicate SQLite imports,
  unused itemPlaced callback method
- Duplication: extracted shared SchedulingMoveUtils (countsValid, evaluateMove, applyMove)
  used by TabuSearchStrategy, HybridMetaheuristicStrategy, and HillClimbingStrategy
- Error handling: SchedulingException now properly thrown in BacktrackingScheduler and
  caught in TimetableGenerator with graceful failure fallback
- Refactor: extracted exporter creation into private method in ApplicationBootstrap
- Tests: added 15 tests for TabuSearchStrategy, HybridMetaheuristicStrategy, and
  SchedulingMoveUtils covering optimization, constraint preservation, and lesson counts